--- a/lab2/src/rsa_qsys/rsa_qsys.cmp
+++ b/lab2/src/rsa_qsys/rsa_qsys.cmp
@@ -1,9 +1,9 @@
 	component rsa_qsys is
 		port (
-			clk_clk                        : in  std_logic := 'X'; -- clk
-			reset_reset_n                  : in  std_logic := 'X'; -- reset_n
-			uart_0_external_connection_rxd : in  std_logic := 'X'; -- rxd
-			uart_0_external_connection_txd : out std_logic         -- txd
+			altpll_0_c0_clk : out std_logic;        -- clk
+			altpll_0_c1_clk : out std_logic;        -- clk
+			clk_clk         : in  std_logic := 'X'; -- clk
+			reset_reset_n   : in  std_logic := 'X'  -- reset_n
 		);
 	end component rsa_qsys;
 
